[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/GlowPiece.png" type="Texture" id=1]
[ext_resource path="res://Font/blindRobot.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Script/Settings.gd" type="Script" id=3]
[ext_resource path="res://Art/tbr_tabSlider.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.745098, 0.745098, 0.745098, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 35
border_blend = true
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 35
border_color = Color( 0.25098, 0.231373, 0.270588, 1 )
border_blend = true
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 35
border_color = Color( 0, 0, 0, 1 )
border_blend = true
shadow_color = Color( 0, 0, 0, 0.247059 )
shadow_size = 10

[sub_resource type="DynamicFont" id=4]
size = 54
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.105882, 0.0980392, 0.113725, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.290196 )
shadow_size = 10

[sub_resource type="Animation" id=8]
resource_name = "layDown"
tracks/0/type = "value"
tracks/0/path = NodePath("Asset/Shadows:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 0.01, 0.01, 1 ),
"update": 0,
"values": [ Vector2( 288, -96 ), Vector2( 288, -96 ), Vector2( 288, 528 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Asset/VoxelGI:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 0.02, 0.02, 1 ),
"update": 0,
"values": [ Vector2( 288, -224 ), Vector2( 288, -224 ), Vector2( 288, 400 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Asset/VSync:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 0.03, 0.03, 1 ),
"update": 0,
"values": [ Vector2( 288, -352 ), Vector2( 288, -352 ), Vector2( 288, 272 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Asset/Fullscreen:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 0.04, 0.04, 1 ),
"update": 0,
"values": [ Vector2( 288, -480 ), Vector2( 288, -480 ), Vector2( 288, 144 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Asset/Music:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 0.05, 0.05, 1 ),
"update": 0,
"values": [ Vector2( 768, -464 ), Vector2( 768, -464 ), Vector2( 768, 160 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Asset/SFX:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 0.06, 0.06, 1 ),
"update": 0,
"values": [ Vector2( 928, -464 ), Vector2( 928, -464 ), Vector2( 928, 160 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Asset/Background:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.1, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Asset:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[node name="Settings" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Asset" type="Node2D" parent="."]
visible = false

[node name="Fullscreen" type="Button" parent="Asset"]
margin_left = 288.0
margin_top = -480.0
margin_right = 672.0
margin_bottom = -384.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Asset/Fullscreen"]
margin_right = 384.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Fullscreen"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSync" type="Button" parent="Asset"]
margin_left = 288.0
margin_top = -352.0
margin_right = 672.0
margin_bottom = -256.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Asset/VSync"]
margin_right = 384.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "VSync"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoxelGI" type="Button" parent="Asset"]
margin_left = 288.0
margin_top = -224.0
margin_right = 672.0
margin_bottom = -128.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = true
pressed = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Asset/VoxelGI"]
margin_right = 384.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "VoxelGI"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadows" type="Button" parent="Asset"]
margin_left = 288.0
margin_top = -96.0
margin_right = 672.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = true
pressed = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Asset/Shadows"]
margin_right = 384.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
text = "Shadows"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="VSlider" parent="Asset"]
margin_left = 768.0
margin_top = -464.0
margin_right = 832.0
margin_bottom = 3.05176e-05
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 5 )
max_value = 10.0
value = 5.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Asset/Music"]
margin_left = -48.0
margin_top = -64.0
margin_right = 112.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 6 )
text = "<Music>"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="Asset/Music"]
show_behind_parent = true
margin_left = 28.075
margin_right = 36.075
margin_bottom = 464.0
mouse_filter = 2
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="VSlider" parent="Asset"]
margin_left = 928.0
margin_top = -464.0
margin_right = 992.0
margin_bottom = -3.05176e-05
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 5 )
max_value = 10.0
value = 5.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Asset/SFX"]
margin_left = -48.0
margin_top = -64.0
margin_right = 112.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 6 )
text = "<SFX>"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="Asset/SFX"]
show_behind_parent = true
margin_left = 28.075
margin_right = 36.075
margin_bottom = 464.0
mouse_filter = 2
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Asset"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_left = -0.929932
margin_top = -0.874771
margin_right = 1279.07
margin_bottom = 719.125
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/layDown = SubResource( 8 )

[connection signal="toggled" from="Asset/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="Asset/VSync" to="." method="_on_VSync_toggled"]
[connection signal="toggled" from="Asset/VoxelGI" to="." method="_on_VoxelGI_toggled"]
[connection signal="toggled" from="Asset/Shadows" to="." method="_on_Shadows_toggled"]
[connection signal="value_changed" from="Asset/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Asset/SFX" to="." method="_on_SFX_value_changed"]
